# zobaczycmorze-zgloszenia

./: .gitignore  README.md  TODO.md  manage.py  pyproject.toml  requirements.txt
rejs/: admin.py  apps.py  audit.py  forms.py  mailers.py  models.py  signals.py  tests.py  views.py
rejs/migrations/: 0001_initial.py  0002_alter_rejs_options_alter_zgloszenie_options.py  0003_rejs_cena_rejs_zaliczka_zgloszenie_status_finanse_and_more.py  0004_alter_finanse_zgloszenie.py  0005_zgloszenie_wzrok_wachta.py  0006_remove_wachta_czlonkowie_zgloszenie_wachta.py  0007_alter_wplata_options_info.py  0008_alter_finanse_options_zgloszenie_token.py  0009_alter_zgloszenie_status_ogloszenie_delete_info.py  0010_remove_wplata_finanse_wplata_rodzaj_and_more.py  0011_alter_ogloszenie_options_alter_wachta_options_and_more.py  0012_alter_zgloszenie_obecnosc.py  0013_alter_zgloszenie_data_urodzenia_and_more.py  0014_alter_zgloszenie_status.py  0015_alter_dane_dodatkowe_options_and_more.py  0016_zgloszenie_adres_zgloszenie_kod_pocztowy_and_more.py  0017_dodanie_zgody_dane_wrazliwe.py  0023_fix_unknown_defaults.py
rejs/modele/: __init__.py  audyt.py  finanse.py  komunikacja.py  pola.py  rejs.py  zgloszenie.py
rejs/reports/: __init__.py  builder.py
rejs/serwisy/: __init__.py  notyfikacje.py  rejestracja.py  wachty.py
rejs/tests/: __init__.py  test_admin.py  test_audit.py  test_audyt.py  test_forms.py  test_mailers.py  test_modele.py  test_models.py  test_reports.py  test_signals.py  test_views.py  test_walidatory.py
rejs/walidatory/: __init__.py  (+2 more)
zm_zgloszenia/: asgi.py  wsgi.py
(+26 files in other folders)
