[project]
name = "zm-zgloszenia"
version = "0.1.0"
description = "Ship cruise registration system for visually impaired users"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2.8",
    "asgiref>=3.11.0",
    "sqlparse>=0.5.3",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "django-stubs",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = false
warn_return_any = true
warn_unused_ignores = true

[tool.django-stubs]
django_settings_module = "zm_zgloszenia.settings"

[tool.poe.tasks]
serve = "python manage.py runserver"
migrate = "python manage.py migrate"
createsuperuser = "python manage.py createsuperuser"
setup = ["migrate", "createsuperuser"]
